# rusti-simple-auth-server

./: .gitignore  .sqllsrc.json  Cargo.toml  de.sql  docker-compose.yml
migrations/: 20230818041237_init.down.sql  20230818041237_init.up.sql
public/: index.html  package-lock.json  package.json
public/src/: main.ts  style.css
src/: config.rs  error.rs  main.rs
src/api/: mod.rs
src/api/controllers/: auth.rs
src/api/middlewares/: auth.rs
src/api/models/: session.rs  user.rs
src/api/routes/: mod.rs
src/api/services/: auth.rs
src/utils/: argon.rs
tests/: dev.rs
