[package]
name = "rust_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.1"
axum = { version = "0.6.20", features = ["tracing"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "uuid", "postgres", "chrono", "json", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.5"
